force-app/main/default/objects/Opportunity/fields/Opp_Origin__c.field-meta.xml
<CustomField>
    <fullName>Opp_Origin__c</fullName>
    <label>Opp Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telesales</fullName>
                <default>true</default>
                <label>Telesales</label>
            </value>
            <value>
                <fullName>Fieldsales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>