force-app/main/default/objects/Opportunity/fields/Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Country__c</fullName>
    <description>SSC-1533</description>
    <label>Opportunity Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>