force-app/main/default/objects/Opportunity/fields/Order_Transmission_Fee_AU__c.field-meta.xml
<CustomField>
    <fullName>Order_Transmission_Fee_AU__c</fullName>
    <description>Order Transmission Fee for AU, For Migration Only</description>
    <label>Order Transmission Fee_AU</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>