force-app/main/default/objects/Opportunity/fields/PPOppLineItems__c.field-meta.xml
<CustomField>
    <fullName>PPOppLineItems__c</fullName>
    <label>PPOppLineItems</label>
    <summaryFilterItems>
        <field>Opportunity_Line_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>UK Opportunity Line Item</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity_Line_Item__c.Line_Item_Type__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity_Line_Item__c.Sub_type__c</field>
        <operation>equals</operation>
        <value>Premium Placement</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Line_Item__c.Id_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>