force-app/main/default/objects/Opportunity/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>SSC-2436</description>
    <formula>TEXT( Account.Preferred_language__c)</formula>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>