force-app/main/default/objects/Opportunity/fields/Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check__c</fullName>
    <label>Quality Check</label>
    <type>DateTime</type>
</CustomField>