force-app/main/default/objects/Opportunity/fields/Quality_Check_By__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Check By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>