force-app/main/default/objects/Opportunity/fields/Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Quality_Description__c</fullName>
    <label>Quality Check Description</label>
    <type>TextArea</type>
</CustomField>