force-app/main/default/objects/Opportunity/fields/Quantity_AU__c.field-meta.xml
<CustomField>
    <fullName>Quantity_AU__c</fullName>
    <label>Quantity_AU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>