force-app/main/default/objects/Opportunity/fields/Quote_Comment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Comment__c</fullName>
    <description>Quote Comment</description>
    <label>Quote Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>