force-app/main/default/objects/Opportunity/fields/Quote_Comment_Menu_Printing__c.field-meta.xml
<CustomField>
    <fullName>Quote_Comment_Menu_Printing__c</fullName>
    <description>Quote Comment Menu Printing</description>
    <label>Quote Comment Menu Printing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>