force-app/main/default/objects/Opportunity/fields/Record_Country__c.field-meta.xml
<CustomField>
    <fullName>Record_Country__c</fullName>
    <formula>TEXT( Account.Record_Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Country</label>
    <type>Text</type>
</CustomField>