force-app/main/default/objects/Opportunity/fields/Renewal_Fee_TB__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Fee_TB__c</fullName>
    <label>Renewal Fee Tb</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>