force-app/main/default/objects/Opportunity/fields/Schedule_into_the_past__c.field-meta.xml
<CustomField>
    <fullName>Schedule_into_the_past__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule into the past</label>
    <type>Checkbox</type>
</CustomField>