force-app/main/default/objects/Opportunity/fields/Selfbooking_Owner__c.field-meta.xml
<CustomField>
    <fullName>Selfbooking_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Owner that made the Self Booking in RPS (Restaurant Portal Service)</description>
    <label>Selfbooking Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>