force-app/main/default/objects/Opportunity/fields/Set_Up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Fee__c</fullName>
    <label>Set Up Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>