force-app/main/default/objects/Opportunity/fields/Setup_Fee_AU__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_AU__c</fullName>
    <description>Setup Fee for AU, for migration only</description>
    <label>Setup Fee AU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>