force-app/main/default/objects/Opportunity/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Uses in Booking Rest Service. To store the information about external system name through which the booking was done.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIDAS</fullName>
            </value>
            <value>
                <fullName>Restaurant Portal Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>