force-app/main/default/objects/Opportunity/fields/Start_Date_uk__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_uk__c</fullName>
    <description>For Migration Only</description>
    <inlineHelpText>Use field it the Start Date is NOT ASAP. Automatically populated via tariffs.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>