force-app/main/default/objects/Opportunity/fields/Sub_Deal__c.field-meta.xml
<CustomField>
    <fullName>Sub_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Deal</label>
    <type>Checkbox</type>
</CustomField>