force-app/main/default/objects/Opportunity/fields/SubTotalRF__c.field-meta.xml
<CustomField>
    <fullName>SubTotalRF__c</fullName>
    <label>SubTotal</label>
    <summarizedField>Opportunity_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity_Line_Item__c.Line_Item_Type__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Line_Item__c.Id_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>