force-app/main/default/objects/Opportunity/fields/tariff_online_CD__c.field-meta.xml
<CustomField>
    <fullName>tariff_online_CD__c</fullName>
    <label>tariff online CD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>