force-app/main/default/objects/Opportunity/fields/TarrifName_AU__c.field-meta.xml
<CustomField>
    <fullName>TarrifName_AU__c</fullName>
    <description>Tarrif Name for AU, for migration only</description>
    <label>TarrifName_AU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>