force-app/main/default/objects/Opportunity/fields/Time_Based_Tier_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Based_Tier_Type__c</fullName>
    <label>Time Based Tier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intervals</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>