force-app/main/default/objects/Opportunity/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>