force-app/main/default/objects/Opportunity/recordTypes/AT_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>AT_Opportunity</fullName>
    <active>true</active>
    <businessProcess>AT Sales Process</businessProcess>
    <label>AT Opportunity</label>
</RecordType>