force-app/main/default/objects/Opportunity/recordTypes/CD_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>CD_Opportunity</fullName>
    <active>true</active>
    <businessProcess>CD Sales Process</businessProcess>
    <description>Opportunity for Click Delivery</description>
    <label>CD Opportunity</label>
</RecordType>