force-app/main/default/objects/Opportunity/recordTypes/Chain_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Chain_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Chain Opportunity Sales Process</businessProcess>
    <label>Chain Opportunity</label>
</RecordType>