force-app/main/default/objects/Opportunity/recordTypes/CZ_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>CZ_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Global Sales Process</businessProcess>
    <description>Czech Republic Opportunity</description>
    <label>CZ Opportunity</label>
</RecordType>