force-app/main/default/objects/Opportunity/recordTypes/DH_AU_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Opportunity</fullName>
    <active>true</active>
    <businessProcess>DH AU Sales Process</businessProcess>
    <description>Austrialian Sales Process</description>
    <label>DH AU Opportunity</label>
</RecordType>