force-app/main/default/objects/Opportunity/recordTypes/FI_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>FI_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sweden Sales Process</businessProcess>
    <description>Finland Sales process</description>
    <label>FI Opportunity</label>
</RecordType>