force-app/main/default/objects/Opportunity/recordTypes/FP_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>FP_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Global Sales Process</businessProcess>
    <label>FP Opportunity</label>
</RecordType>