force-app/main/default/objects/Opportunity/recordTypes/HU_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>HU_Opportunity</fullName>
    <active>true</active>
    <businessProcess>HU Sales Process</businessProcess>
    <description>Hungary Opportunity</description>
    <label>HU Opportunity</label>
</RecordType>