force-app/main/default/objects/Opportunity/recordTypes/PY_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PY_Opportunity</fullName>
    <active>true</active>
    <businessProcess>PY Sales Process</businessProcess>
    <label>PY Opportunity</label>
</RecordType>