force-app/main/default/objects/Opportunity/recordTypes/SE_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>SE_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sweden Sales Process</businessProcess>
    <description>Sweden Opportunity</description>
    <label>SE Opportunity</label>
</RecordType>