force-app/main/default/objects/Opportunity/recordTypes/Talabat_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Talabat Sales Process</businessProcess>
    <description>Talabat Opportunity</description>
    <label>Talabat Opportunity</label>
</RecordType>