force-app/main/default/objects/Opportunity/recordTypes/UK_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>UK_Opportunity</fullName>
    <active>true</active>
    <businessProcess>UK Sales Process</businessProcess>
    <label>UK Opportunity</label>
</RecordType>