force-app/main/default/objects/Opportunity/recordTypes/Yogiyo_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Yogiyo Sales Proccess</businessProcess>
    <description>KR Opportunity Recordtype</description>
    <label>Yogiyo Opportunity</label>
</RecordType>