force-app/main/default/objects/Opportunity/validationRules/Chain_Opportunity_to_child_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Chain_Opportunity_to_child_validation</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(TEXT(Account.Type ),&apos;Branch&apos;) &amp;&amp; RecordType.DeveloperName = &apos;Chain_Opportunity&apos;</errorConditionFormula>
    <errorMessage>Headquarter deals cannot be created on branch level</errorMessage>
</ValidationRule>