force-app/main/default/objects/Opportunity/validationRules/Global_Business_Type_Locked_After_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_Business_Type_Locked_After_QA</fullName>
    <active>true</active>
    <errorConditionFormula>Probability&gt;0.90 
&amp;&amp; 
ISCHANGED(Business_Type__c)
&amp;&amp; 
NOT($Profile.Name=&quot;System Administrator&quot;)
&amp;&amp; 
NOT(CONTAINS($Profile.Name, &quot;Management&quot;))
&amp;&amp; 
NOT(ISCHANGED( Last_Call_Comments__c ))</errorConditionFormula>
    <errorDisplayField>Business_Type__c</errorDisplayField>
    <errorMessage>You can not edit the business type once the quality check is completed</errorMessage>
</ValidationRule>