force-app/main/default/objects/Opportunity/validationRules/Global_Lost_Reason_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_Lost_Reason_is_required</fullName>
    <active>true</active>
    <description>Lost Reason is required when an Opportunity is marked &quot;Closed-Lost&quot;</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName,&quot;Closed Lost&quot;),
 ($Profile.Name &lt;&gt; &apos;System Administrator&apos;),
    ISBLANK (TEXT (Lost_Reason__c ) )
    )</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Please select a lost reason</errorMessage>
</ValidationRule>