force-app/main/default/objects/Opportunity/validationRules/PY_Sales_team_can_not_edit_opp_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>PY_Sales_team_can_not_edit_opp_owner</fullName>
    <active>true</active>
    <description>SP-4287</description>
    <errorConditionFormula>ISCHANGED(OwnerId)
&amp;&amp;
$Profile.Name = &quot;PY Sales Team&quot;</errorConditionFormula>
    <errorMessage>You can not edit the owner of accounts, please contact your manager to help you transferring this account</errorMessage>
</ValidationRule>