force-app/main/default/objects/Opportunity/listViews/AT_Opportunities_Status_Check.listView-meta.xml
<ListView>
    <fullName>AT_Opportunities_Status_Check</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Account_Billing_City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Please Check</value>
    </filters>
    <label>AT - Opportunities - Stage Check</label>
    <language>en_US</language>
    <sharedTo>
        <role>AT_Customer_Care_Team</role>
        <role>AT_Management</role>
        <role>AT_Sales_Team</role>
    </sharedTo>
</ListView>