force-app/main/default/objects/Opportunity/listViews/AT_Oppurtunities_Documents_received.listView-meta.xml
<ListView>
    <fullName>AT_Oppurtunities_Documents_received</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.AT_Opportunity</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Documents Received</value>
    </filters>
    <label>AT - Oppurtunities Documents received</label>
    <language>de</language>
    <sharedTo>
        <roleAndSubordinates>AT_Management</roleAndSubordinates>
        <roleAndSubordinates>AT_Sales_Team</roleAndSubordinates>
    </sharedTo>
</ListView>