force-app/main/default/objects/Opportunity/listViews/AU_Editorial_Quality_Check.listView-meta.xml
<ListView>
    <fullName>AU_Editorial_Quality_Check</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Menu received</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.DH_AU_Opportunity</value>
    </filters>
    <label>AU - Editorial Quality Check</label>
    <language>en_US</language>
    <sharedTo>
        <role>DH_AU_Customer_Care_Team</role>
    </sharedTo>
</ListView>