force-app/main/default/objects/Opportunity/listViews/CD_Oportunidades_Colombia.listView-meta.xml
<ListView>
    <fullName>CD_Oportunidades_Colombia</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Type__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.CD_Opportunity</value>
    </filters>
    <filters>
        <field>Record_Country__c</field>
        <operation>equals</operation>
        <value>Colombia</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CD - Oportunidades abiertas Colombia</label>
    <language>en_US</language>
    <sharedTo>
        <role>CD_Management</role>
        <role>Global_Admin</role>
        <roleAndSubordinates>CD_Sales_Management_Colombia</roleAndSubordinates>
    </sharedTo>
</ListView>